tests/baselines/reference/parserStatementIsNotAMemberVariableDeclaration1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserStatementIsNotAMemberVariableDeclaration1.ts (2 errors) ====
    return {
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
    
      "set": function (key, value) {
    
        // 'private' should not be considered a member variable here.
        private[key] = value;
        ~~~~~~~
!!! error TS2304: Cannot find name 'private'.
    
      }
    
    };